Passing Query Parameters and Fragments to the Url Route with template and programmatically

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -2,7 +2,10 @@
 <h3>User with name {{user?.name}}</h3>
 
 <div>
-    <a [routerLink]="['/users',1,'leela']">Get Details of Leela</a>
+    <a [routerLink]="['/users',1,'leela']"[queryParams]="{page:1,search:'leela'}"[fragment]="'load'">Get Details of Leela</a>
     <!-- let say user.id=3,user.name="deepansji" -->
     <!-- when we click this anchor component will not rerenderd , only url change data doesnot -->
+</div>
+<div>
+    <button (click)="getRamaDetails()">Get Rama Details</button>
 </div>
