--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,7 +1,22 @@
-<p>users works!</p>
+<!-- <p>users works!</p>
 
 <div>
     <button (click)="onCategoriesClick()">Go To Categories</button>
 </div>
 
-<a [routerLink]="['/users',7,'manish']" [queryParams]="{page:8,search:'leela'}" [fragment]="'load'">Get Manish Details</a>
+<a [routerLink]="['/users',7,'manish']" [queryParams]="{page:8,search:'leela'}" [fragment]="'load'">Get Manish Details</a> -->
+
+<ul class="nav flex-column">
+    <li class="nav-item">
+        <a [routerLink]="['/users',1,'Rama']" class="nav-link">Get Rama Details</a>
+    </li>
+    <li class="nav-item">
+        <a [routerLink]="['/users',2,'Krishna']"  class="nav-link">Get Krishna Details</a>
+    </li>
+    <li class="nav-item">
+        <a [routerLink]="['/users',3,'Leela']"  class="nav-link">Get Leela Details</a>
+    </li>
+</ul>
+<div>
+    <router-outlet></router-outlet>
+</div>
